<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
    >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/question_1_header"
            android:id="@+id/question_1"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textYes"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_marginStart="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textNo"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_marginStart="20dp" />
        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/question_2_header"
            android:id="@+id/question_2"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:focusable="false"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/question_3_header"
            android:id="@+id/question_3"
            />

        <Switch
            android:text="@string/textNo"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/question_4_header"
            android:id="@+id/question_4"
            />
        <CalendarView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:text="@string/send_button_text"
            android:fontFamily="sans-serif-smallcaps"
            android:textAlignment="center"
            />


    </LinearLayout>
</ScrollView>